# fabric-orchestrator

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  SETUP.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: publish.yml  tests.yml
docs/: getting-started.md  index.md  microsoft-fabric-api-reference.md
docs/api/: configuration.md  deployment.md  overview.md  workspace-management.md
docs/exploration/: fabric-api-complete-documentation.json  fabric-api-exploration.ipynb  microsoft-fabric-api.ipynb
scripts/: __init__.py  deploy_to_fabric.py  generate_deployment_summary.sh
src/fabric_orchestrator/: __init__.py  auth.py  cli.py  config.py  deploy_to_fabric.py  deployer.py  deployment.py  discovery.py  fabric_workspace_manager.py  logger.py
tests/: __init__.py  conftest.py  test_deploy_to_fabric.py  test_deploy_to_fabric_extended.py  test_deployment_config.py  test_fabric_workspace_manager.py  test_fabric_workspace_manager_extended.py  test_logger.py  test_workspace_manager.py
wiki/: Deployment-Workflow.md  FAQ.md  Home.md  Setup-Guide.md  Troubleshooting.md  Wiki-Contribution.md  Workspace-Configuration.md  _Footer.md  _Sidebar.md
workspaces/Fabric Blueprint/: config.yml  parameter.yml
workspaces/Fabric Blueprint/1_Bronze/ingestion/cp_br_source.CopyJob/: .platform  copyjob-content.json
workspaces/Fabric Blueprint/1_Bronze/lakehouse_bronze.Lakehouse/: .platform
workspaces/Fabric Blueprint/2_Silver/lakehouse_silver.Lakehouse/: .platform  alm.settings.json
workspaces/Fabric Blueprint/2_Silver/transformation/nb_sl_transform.Notebook/: .platform
workspaces/Fabric Blueprint/3_Gold/lakehouse_gold.Lakehouse/: .platform
workspaces/Fabric Blueprint/3_Gold/modeling/nb_gd_modeling.Notebook/: .platform
workspaces/Fabric Blueprint/4_Analytics/Data Agents/da_agent.DataAgent/: .platform
workspaces/Fabric Blueprint/4_Analytics/Data Agents/da_agent.DataAgent/Files/Config/draft/: stage_config.json
workspaces/Fabric Blueprint/env.Environment/: .platform
